# boatrace-crawler

./: .gitignore  README.md  pyproject.toml
crawler/: items.py  settings.py
crawler/spiders/: __init__.py  history.py  odds.py
